--- a/vnc.html
+++ b/vnc.html
@@ -274,6 +274,10 @@
                                         <label for="noVNC_setting_path">Path:</label>
                                         <input id="noVNC_setting_path" type="text" value="websockify">
                                     </li>
+                                    <li>
+                                        <label for="noVNC_setting_token">Token:</label>
+                                        <input id="noVNC_setting_token" type="text">
+                                    </li>
                                 </ul></div>
                             </li>
                             <li><hr></li>
