feat: add token(lite)

--- a/vnc_lite.html
+++ b/vnc_lite.html
@@ -132,6 +132,7 @@
         let port = readQueryVariable('port', window.location.port);
         const password = readQueryVariable('password');
         const path = readQueryVariable('path', 'websockify');
+        const token = readQueryVariable('token');
 
         // | | |         | | |
         // | | | Connect | | |
@@ -151,6 +152,9 @@
             url += ':' + port;
         }
         url += '/' + path;
+        if (token) {
+            url += '?token=' + token;
+        }
 
         // Creating a new RFB object will start a new connection
         rfb = new RFB(document.getElementById('screen'), url,
